--- a/_output.yml
+++ b/_output.yml
@@ -11,11 +11,11 @@ bookdown::gitbook:
           <li class='before'><a href="./">Uppsprettur örplasts í hafinu við Ísland</a></li>
       after: |
          <li class='after'">
-            <a href="https://github.com/harkanatta/UAR-skyrsla" target="_blank">Framleitt af BioPol ehf. fyrir Umhverfis- og auðlindaráduneytið</a>
+            
                             <a href="https://biopol.is/">
-                <img src="myndir/biopol_logo.png" style="width:25%; padding:0px 0; display:block; margin: 0 auto;" alt="BioPol logo">
-              <a href="https://github.com/harkanatta/UAR-skyrsla">
-                    <img src="myndir/github_logo.png" style="width:25%; padding:0px 0; display:block; margin: 0 auto;" alt="Vinnusvæði skýrslunnar">
+                <img src="myndir/biopollogo.png" style="width:25%; padding:0px 0; display:block; margin: 0 auto;" alt="BioPol logo">
+              <a href="https://www.nnv.is/">
+                    <img src="myndir/nnvlogo.png" style="width:25%; padding:0px 0; display:block; margin: 0 auto;" alt="Vinnusvæði skýrslunnar">
                       
 
                   <a href="https://www.stjornarradid.is/raduneyti/umhverfis-og-audlindaraduneytid/">
